--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/library
+#spring.datasource.url=jdbc:postgresql://localhost:5432/library
+spring.datasource.url=jdbc:postgresql://192.168.49.2:31956/library
 spring.datasource.username=postgres
 spring.datasource.password=password
 
