--- a/postgres-deployment.yaml
+++ b/postgres-deployment.yaml
@@ -1,12 +1,12 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: postgres  # Sets Deployment name
+  name: postgres
 spec:
-  replicas: 1
   selector:
     matchLabels:
       app: postgres
+  replicas: 1
   template:
     metadata:
       labels:
@@ -14,17 +14,18 @@ spec:
     spec:
       containers:
         - name: postgres
-          image: postgres:10.1 # Sets Image
-          imagePullPolicy: "IfNotPresent"
+          image: postgres:13
           ports:
-            - containerPort: 5432  # Exposes container port
-          envFrom:
-            - configMapRef:
-                name: postgres-config
-          volumeMounts:
-            - mountPath: /var/lib/postgresql/data
-              name: postgredb
-      volumes:
-        - name: postgredb
-          persistentVolumeClaim:
-            claimName: postgres-pv-claim
+            - containerPort: 5432
+              name: "postgres"
+          env:
+            - name: POSTGRES_DB
+              value: "library"
+            - name: POSTGRES_USER
+              value: "postgres"
+            - name: POSTGRES_PASSWORD
+              value: "password"
+          resources:
+            limits:
+              memory: 4Gi
+              cpu: "2"
