remove failed tests

--- a/docker/env.yml
+++ b/docker/env.yml
@@ -9,5 +9,6 @@ services:
     environment:
       LIBRARY_PORT: 8084
       SPRING_DATASOURCE_URL: "jdbc:postgresql://library-db:5432/library"
+      SPRING_LIQUIBASE_ENABLED: true
     depends_on:
       - library-db
