--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/library
 spring.datasource.username=postgres
 spring.datasource.password=password
-
-spring.liquibase.change-log=classpath:/db/baseChangelog.xml
+spring.liquibase.enabled=false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
